# Algoritms

./: .github  .gitignore  CMakeLists.txt  main.cpp
include/: ArcGraph.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h  func.h  utils.h
modul_1_zad_1_1/: .gitignore  CMakeLists.txt  main.cpp
src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  func.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt  test.cpp
